envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: grpc_service
              cors:
                allow_origin: ["*"]
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: Content-type, X-User-Agent, X-Grpc-Web
                max_age: "1728000"
                enabled: true
            response_headers_to_add:
            - header:
                key: Access-Control-Allow-Origin
                value: "*"
              append: false
            - header:
                key: Access-Control-Allow-Methods
                value: GET, POST, OPTIONS
              append: false
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router

  clusters:
  - name: grpc_service
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: $gRPC_SERVICE_IP  # replace this with your grpc service ip address
        port_value: 3000  # replace this if your grpc service is listening on another port

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
